<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:padding="18dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/marvel_match"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        />

    <TextView
        android:id="@+id/tapTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:text="@string/tap_to_view_the_card"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginBottom="40dp"
        android:padding="8dp"
        />

    <LinearLayout
        android:id="@+id/image"
        android:layout_below="@+id/tapTextView"

        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/card_back"
            android:contentDescription="@string/card_1"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/card_back"
            android:contentDescription="@string/card_2"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/pairsFoundTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/pairs_found_0"
        android:textColor="@color/white"
        android:textStyle="italic|bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/image"
        android:textSize="18sp"
        android:padding="8dp"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/movesTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="italic|bold"
        android:layout_below="@+id/pairsFoundTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/moves_0"
        android:textSize="18sp"
        android:padding="8dp"
        />


    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="italic|bold"
        android:layout_below="@id/movesTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/time_left_00_00"
        android:textSize="18sp"
        android:padding="8dp"
        />
    <Button
        android:id="@+id/quitButton"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/timerTextView"
        android:backgroundTint="@color/white"
        android:text="@string/quit"
        android:textColor="@color/red"
        android:textStyle="italic|bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        />

</RelativeLayout>
