<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:padding="16dp">

    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/edittext_bg"
        android:background="@drawable/title"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/titleimage" />


    <Button
        android:id="@+id/startButton"
        android:layout_width="200dp"
        android:layout_height="70dp"
       android:layout_below="@+id/titleImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/white"
        android:text="@string/start"
        android:textSize="18sp"
        android:textColor="#FF5722"
        android:textStyle="bold|italic" />
    <Button
        android:id="@+id/instructionsButton"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_below="@id/startButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/instructions"
        android:textSize="18sp"
        android:textColor="#FF5722"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_below="@+id/instructionsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/exit"
        android:textSize="18sp"
        android:textColor="#FF5722"
        android:textStyle="bold|italic" />


</RelativeLayout>
