<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:orientation="vertical"
    android:padding="18dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/marvel_match"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="40dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_bg"
        android:gravity="center|top"
        android:orientation="vertical">
        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/red"
            android:padding="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/pairsFoundTextView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/movesTextView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/timeStatusTextView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/retryButton"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/white"
            android:text="@string/retry"
            android:textColor="@color/red"
            android:textStyle="italic|bold"
            android:textSize="18sp"
            android:layout_marginTop="40dp"
            />
        <Button
            android:id="@+id/exitButton"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/white"
            android:text="@string/exit"
            android:textColor="@color/red"
            android:textStyle="italic|bold"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>


</LinearLayout>
